first push with wordstat

--- a/server/www/templates/views/views.html
+++ b/server/www/templates/views/views.html
@@ -24,6 +24,9 @@
         <!-- timeline view -->
         <post-view-timeline ng-switch-when="timeline" is-loading="isLoading" filters="filters"></post-view-timeline>
 
+        <!-- wordstat view -->
+        <post-view-wordstat ng-switch-when="wordstat" is-loading="isLoading" filters="filters"></post-view-wordstat>
+
         <!-- default view -->
         <post-view-map ng-switch-default is-loading="isLoading" filters="filters"></post-view-map>
     </div>
