--- a/server/www/templates/views/views.html
+++ b/server/www/templates/views/views.html
@@ -25,7 +25,7 @@
         <post-view-timeline ng-switch-when="timeline" is-loading="isLoading" filters="filters"></post-view-timeline>
 
         <!-- wordstat view -->
-        <post-view-wordstat ng-switch-when="wordstat" is-loading="isLoading" filters="filters"></post-view-wordstat>
+        <post-view-wordstat ng-switch-when="wordstat" is-loading="isLoading" filters="filters">Hello my name is WORDSTAT SHOW ME!!!</post-view-wordstat>
 
         <!-- default view -->
         <post-view-map ng-switch-default is-loading="isLoading" filters="filters"></post-view-map>
