--- a/server/www/templates/views/wordstat.html
+++ b/server/www/templates/views/wordstat.html
@@ -1,5 +1,5 @@
 
-<div class="graph-view">
+<div class="wordstat">
     <form class="clearfix">
         <div class="custom-select">
             <label translate>graph.group_by_placeholder</label>
