--- a/server/www/templates/views/wordstat.html
+++ b/server/www/templates/views/wordstat.html
@@ -8,5 +8,5 @@
         </div>
     </form>
 
-    <nvd3 options='options' data='data'></nvd3>
+    <nvd3 options='options' data='data'>'data'</nvd3>
 </div>
